--- a/index.html
+++ b/index.html
@@ -44,3 +44,68 @@
   </body>
  </main>
 </html>
+
+<style>
+  body {
+  font-family: arial;
+  background: #EEEEEE;
+  color: black;
+  text-align: center;
+}
+#image {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.h1 {
+  margin-top: 0em;
+  margin-bottom: 0.25em;
+}
+
+.h2 {
+  margin-bottom: 1.25em;
+}
+.imcap {
+  margin-top: 0.5em;
+  margin-bottom: 3.5em;
+  color: #00b300;
+;
+}
+
+.intro {
+  text-align: justify;
+  line-height: 1.5em;
+  margin-left: 20em;
+  margin-right: 20em;
+}
+
+.timeline {
+  font-size: 25px;
+  margin-top: 2em;
+}
+
+div.list {
+  text-align: center;
+  line-height: 2.5em;
+  list-style-position: inside;
+}
+
+ul.myUL {
+  display: inline-block;
+  text-align: left;
+  list-style-type: "⚽️";
+}
+
+.quote {
+  margin-top: 2em;
+  margin-bottom: 1.5em;
+  font-size: 25px;
+}
+
+.wiki {
+  color: #0000FF;
+}
+</style>  
